# pre_xb9_distofpoints

./: CMakeLists.txt  README.md  package.xml
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/pre_xb9_distofpoints/share/ament_index/resource_index/package_run_dependencies/: pre_xb9_distofpoints
install/pre_xb9_distofpoints/share/ament_index/resource_index/parent_prefix_path/: pre_xb9_distofpoints
install/pre_xb9_distofpoints/share/pre_xb9_distofpoints/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/pre_xb9_distofpoints/share/pre_xb9_distofpoints/cmake/: pre_xb9_distofpointsConfig-version.cmake  pre_xb9_distofpointsConfig.cmake
install/pre_xb9_distofpoints/share/pre_xb9_distofpoints/environment/: ament_prefix_path.dsv  path.dsv
install/pre_xb9_distofpoints/share/pre_xb9_distofpoints/launch/: launch_example1.launch.py  launch_example2.launch.py
launch/: coordlaunch.py
log/: latest_build
src/: coordpublisher.cpp  coordsubscriber.cpp
